--- a/.env
+++ b/.env
@@ -28,8 +28,7 @@ INSTANCE_MAX_RETRY_QR=5
 # DATABASE CONFIGURATION
 # ==================================
 MONGODB_ENABLED=true
-MONGODB_URL=mongodb://mongo:9V9L85X9RqGpfTVYP6mq@containers-us-west-191.railway.app:7294
-
+MONGODB_URL=mongodb+srv://canalamh3:jUxMrknVKZR3Hl5B@db-whatsapp-api.yu1ewvd.mongodb.net/?retryWrites=true&w=majority
 # ==================================
 # WEBHOOK CONFIGURATION
 # ==================================
