--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ PROTECT_ROUTES=true
 # ==================================
 PORT=3333
 RESTORE_SESSIONS_ON_START_UP=true
-APP_URL=web-production-5729.up.railway.app
+APP_URL=api-whatsapp-baileys.up.railway.app
 LOG_LEVEL=silent
 
 # ==================================
@@ -28,7 +28,7 @@ INSTANCE_MAX_RETRY_QR=5
 # DATABASE CONFIGURATION
 # ==================================
 MONGODB_ENABLED=true
-MONGODB_URL=mongodb+srv://canalamh3:jUxMrknVKZR3Hl5B@db-whatsapp-api.yu1ewvd.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://canalamh3:jUxMrknVKZR3Hl5B@db-whatsapp-api.yu1ewvd.mongodb.net/whatsapp_api
 # ==================================
 # WEBHOOK CONFIGURATION
 # ==================================
